--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -65,6 +65,7 @@ decoration {
         enabled = true
         size = 7
         passes = 3
+        new_optimizations = 0
     }
 
     drop_shadow = yes
