--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -124,14 +124,14 @@ windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, kitty  #open the terminal
-bind = $mainMod SHIFT, X, killactive, # close the active window
+bind = $mainMod, RETURN, exec, kitty  #open the terminal
+bind = $mainMod SHIFT, Q, killactive, # close the active window
 bind = $mainMod, L, exec, swaylock # Lock the screen
 bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
 bind = $mainMod SHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
 bind = $mainMod, E, exec, thunar # Show the graphical file browser
 bind = $mainMod, V, togglefloating, # Allow a window to float
-bind = $mainMod, SPACE, exec, wofi # Show the graphicall app launcher
+bind = $mainMod, F, exec, wofi # Show the graphicall app launcher
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
