--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -95,7 +95,10 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    #new_is_master = true
+	new_status = master
+	new_on_top = 1
+	mfact = 0.5
 }
 
 gestures {
